20 July 2015: Wouter
	- Enable ECDHE for servers.  Where available, use
	  SSL_CTX_set_ecdh_auto() for TLS-wrapped server configurations to
	  enable ECDHE.  Otherwise, manually offer curve p256.
	  Client connections should automatically use ECDHE when available.
	  (thanks Daniel Kahn Gillmor)

18 July 2015: Willem
	- Allow certificate chain files to allow for intermediate certificates.
	  (thanks Daniel Kahn Gillmor)

13 July 2015: Wouter
	- makedist produces sha1 and sha256 files for created binaries too.

9 July 2015: Wouter
	- 1.5.4 release tag
	- trunk has 1.5.5 in development.
	- Fix #681: Setting forwarders with unbound-control forward
	  implicitly turns on forward-first.

29 June 2015: Wouter
	- iana portlist update.
	- Fix alloc with log for allocation size checks.

26 June 2015: Wouter
	- Fix #677 Fix DNAME responses from cache that failed internal chain
	  test.
	- iana portlist update.

22 June 2015: Wouter
	- Fix #677 Fix CNAME corresponding to a DNAME was checked incorrectly
	  and was therefore always synthesized (thanks to Valentin Dietrich).

4 June 2015: Wouter
	- RFC 7553 RR type URI support, is now enabled by default.

2 June 2015: Wouter
	- Fix #674: Do not free pointers given by getenv.

29 May 2015: Wouter
	- Fix that unparseable error responses are ratelimited.
	- SOA negative TTL is capped at minimumttl in its rdata section.
	- cache-max-negative-ttl config option, default 3600.

26 May 2015: Wouter
	- Document that ratelimit works with unbound-control set_option.

21 May 2015: Wouter
	- iana portlist update.
	- documentation proposes ratelimit of 1000 (closer to what upstream
	  servers expect from us).

20 May 2015: Wouter
	- DLV is going to be decommissioned.  Advice to stop using it, and
	  put text in the example configuration and man page to that effect.

10 May 2015: Wouter
	- Change syntax of particular validator error to be easier for
	  machine parse, swap rrset and ip adres info so it looks like: